testdata/baselines/reference/submodule/compiler/superNoModifiersCrash.errors.txt
File.js(8,21): error TS8010: Type annotations can only be used in TypeScript files.


==== File.js (1 errors) ====
    class Parent {
        initialize() {
            super.initialize(...arguments)
            return this.asdf = ''
        }
      }
    
    class Child extends Parent {
                        ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
        initialize() {
        }
    }